home.css
* {
    box-sizing: border-box;
    margin: 0;
}

nav {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    position: absolute;
    right: 1rem;
    background-color: #FFECD1;
    font-family: sans-serif;
    color: #C43204;
}

nav h2 {
    margin: 2rem 3rem;
}

main {
    padding-top: 7rem;
    background-color: #FFECD1;
    display: flex;
    flex-direction: column;
    gap: 4rem;
    justify-content: center;
}

.first-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.home-first {
    display: grid;
    grid-template-rows: 2.5fr;
    row-gap: 1rem;
}

.home-first div {
    font-family: "Work Sans", sans-serif;
    font-size: 7rem;
    font-weight: 570;
    border-radius: 1.5rem;
    padding: 1.5rem;
    white-space: no-wrap;
}

.name-text {
    background-color: #C43204;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.name-text .fevin-felix {
    color: #FFBD59;
}

.typing-text {
    background-color: #001524;
    display: flex; 
    align-items: center; 
    justify-content: center;
}

.typing-text p {
    font-size: 4.5rem;
    color: #FFECD1;
}

.home-second {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    gap: 2rem; /* Space between images */
    background-color: #FFECD1;
    justify-items: center; /* Center items horizontally */
    align-items: center; /* Center items vertically */
}

.home-second img {
    max-height: 14rem;
    object-fit: contain;
    object-fit: cover;
}

.home-top {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 9rem;
}

.home-bottom {
    display: flex;
    flex-direction: column;
    background-color: #141414;
    font-size: 2rem;
    text-align: center;
    color: #FFECD1;
    align-items: center;
    padding: 6rem 12rem;
}

.chivo {
    font-family: "Chivo", sans-serif;
    font-optical-sizing: auto;
    font-weight: 570;
    font-style: normal;
}

.dots {
    font-size: 6rem;
}

.yellow {
    color: #FFBD59;
}

.orange {
    color: #EE7B30;
}

/* Media Queries */
/* Responsive font sizing */

/* Media Queries */
/* Responsive adjustments */
@media (max-width: 1600px) {

    nav h2 {
        margin: 1rem 2rem;
    }

    main {
        padding-top: 5rem;
    }

    .home-first div {
        font-size: 6rem;
        padding: 1rem;
    }

    .typing-text p {
        font-size: 4rem;
    }

    .home-second img {
        max-height: 13rem;
        object-fit: contain;
        object-fit: cover;
    }
}

@media (max-width: 1200px) {
    nav {
        right: 2rem;
    }
    
    nav h2 {
        margin: 1rem 2rem;
    }

    main {
        padding-top: 5rem;
        column-gap: 5rem;
    }

    .home-first div {
        font-size: 5rem;
        padding: 1rem;
    }

    .typing-text p {
        font-size: 3rem;
    }

    .home-second img {
        max-height: 12rem;
        object-fit: contain;
        
    }
}


@media (max-width: 925px) {
    
    nav h2 {
        margin: 1rem 2rem;
    }

    main {
        padding-top: 5rem;
        column-gap: 5rem;
        gap: 3rem;
    }

    .home-first div {
        font-size: 4rem;
        padding: 1rem;
    }

    .typing-text p {
        font-size: 2rem;
    }

    .home-second img {
        max-height: 9rem;
        object-fit: contain;
        
    }
}

@media (max-width: 775px) {
    
    nav h2 {
        margin: 1rem 2rem;
    }

    main {
        padding-top: 5rem;
        column-gap: 5rem;
        gap: 3rem;
    }

    .home-first div {
        font-size: 3rem;
        padding: 1rem;
    }

    .home-first {
        margin-left: 1rem;
        margin-right: 1rem;
    }

    .typing-text p {
        font-size: 1rem;
    }

    .home-second img {
        max-height: 8rem;
        object-fit: contain;
    }
}

@media (max-width: 648px) {
    
    nav h2 {
        margin: 1rem 2rem;
    }

    main {
        padding-top: 5rem;
        column-gap: 5rem;
        gap: 3rem;
    }

    .home-first div {
        font-size: 6rem;
        padding: 1rem;
    }

    .home-first {
        margin-left: 1rem;
        margin-right: 1rem;
    }

    .typing-text p {
        font-size: 4rem;
    }

    .home-second img {
        max-height: 12rem;
        object-fit: contain;
    }
}

@media (max-width: 480px) {
    
    nav h2 {
        margin: 1rem 2rem;
    }

    main {
        padding-top: 5rem;
        column-gap: 5rem;
        gap: 3rem;
    }

    .home-first div {
        font-size: 4rem;
        padding: 1rem;
    }

    .home-first {
        margin-left: 1rem;
        margin-right: 1rem;
    }

    .typing-text p {
        font-size: 2rem;
    }

    .home-second img {
        max-height: 10rem;
        object-fit: contain;
    }
}

